--- a/package.json
+++ b/package.json
@@ -1,35 +1,24 @@
 {
-  "name": "pizza-bot-manager",
+  "name": "React_Tutorials",
   "version": "0.1.0",
-  "description": "Sample app for the React Microsoft Virtual Academy course.",
-  "main": "./PizzaBot/server.js",
+  "description": "Sample programs for the React ",
+  "main": "server.js",
   "private": true,
   "scripts": {
-    "start-webpack-server": "webpack-dev-server --hot --inline --colors --progress",
-    "start": "node ./PizzaBot/server.js"
+    "start":"webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sayar/PizzaBotManager.git"
+    "url": "git+https://github.com/Mithrakalaiselvan/React_Tutorials.git"
   },
-  "keywords": [
-    "react",
-    "mva",
-    "redux",
-    "sample-app"
-  ],
-  "author": "Rami Sayar",
+  "author": "Mithra",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sayar/PizzaBotManager/issues"
-  },
   "homepage": "https://github.com/sayar/PizzaBotManager#readme",
   "dependencies": {
     "botbuilder": "^0.9.2",
     "express": "^4.13.4",
     "jquery": "^2.2.3",
     "react": "^15.0.2",
-    "react-addons-pure-render-mixin": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.0",
     "restify": "^4.0.4"
